<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="4"
    android:orientation="horizontal"
    tools:context=".MainActivity"
    style="@android:style/ButtonBar">


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:textSize="@dimen/btn_text_size"
        android:layout_weight="1"
        android:onClick="onClickMain"
        android:text="@string/main">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_weight="1"
        android:onClick="onClickDescr"
        android:textSize="@dimen/btn_text_size"
        android:text="@string/description">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_weight="1"
        android:onClick="onClickPhoto"
        android:textSize="@dimen/btn_text_size"
        android:text="@string/photo">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_weight="1"
        android:onClick="onClickSettings"
        android:textSize="@dimen/btn_text_size"
        android:text="@string/Settings">

    </com.google.android.material.button.MaterialButton>

</LinearLayout>